--- a/Containers/TrackMate/Dockerfile
+++ b/Containers/TrackMate/Dockerfile
@@ -21,7 +21,7 @@ COPY init_fiji.py .
 RUN python /opt/fiji/init_fiji.py
 
 WORKDIR /
-COPY read_settings_and_process_tiff_stack.py .
+COPY read_settings_and_process_mpt_tiff.py .
 COPY entrypoint.sh .
 #RUN mamba install jupyterlab
 #WORKDIR /notebooks
@@ -29,6 +29,6 @@ COPY entrypoint.sh .
 
 #ENTRYPOINT [ "bash" ]
 #ENTRYPOINT ["conda", "run", "--no-capture-output", "-n", "pyimagej", "jupyter", "lab","--ip=0.0.0.0","--allow-root"]
-ENTRYPOINT ["conda", "run", "--no-capture-output", "-n", "pyimagej", "ImageJ-linux64", "--ij2", "--headless", "--run", "read_settings_and_process_tiff_stack.py"]
-CMD conda run -n pyimagej ImageJ-linux64 --headless --jython read_settings_and_process_tiff_stack.py
-#CMD /entrypoint.sh
+ENTRYPOINT ["conda", "run", "--no-capture-output", "-n", "pyimagej", "ImageJ-linux64", "--ij2", "--headless", "--run", "read_settings_and_process_mpt_tiff.py"]
+#CMD conda run -n pyimagej ImageJ-linux64 --headless --jython read_settings_and_process_tiff_stack.py
+CMD /entrypoint.sh
