unable to import pathlib by using requiremnts.txt or pip installing it in docker file

--- a/Containers/TrackMate/Dockerfile
+++ b/Containers/TrackMate/Dockerfile
@@ -1,6 +1,10 @@
 FROM condaforge/mambaforge
 
 RUN mamba create -n pyimagej -c conda-forge pyimagej openjdk=8 unzip
+
+COPY requirements.txt /tmp/requirements.txt
+RUN python3 -m pip install -r requirements.txt
+
 #RUN conda activate pyimagej
 # Make RUN commands use the new environment:
 SHELL ["conda", "run", "--no-capture-output", "-n", "pyimagej", "/bin/bash", "-c"]
@@ -31,4 +35,4 @@ COPY entrypoint.sh .
 #ENTRYPOINT ["conda", "run", "--no-capture-output", "-n", "pyimagej", "jupyter", "lab","--ip=0.0.0.0","--allow-root"]
 ENTRYPOINT ["conda", "run", "--no-capture-output", "-n", "pyimagej", "ImageJ-linux64", "--ij2", "--headless", "--run", "read_settings_and_process_mpt_tiff.py"]
 #CMD conda run -n pyimagej ImageJ-linux64 --headless --jython read_settings_and_process_tiff_stack.py
-CMD /entrypoint.sh
+#CMD /entrypoint.sh
