--- a/Containers/TrackMate/Dockerfile
+++ b/Containers/TrackMate/Dockerfile
@@ -3,7 +3,7 @@ FROM condaforge/mambaforge
 RUN mamba create -n pyimagej -c conda-forge pyimagej openjdk=8 unzip
 
 COPY requirements.txt /tmp/requirements.txt
-RUN python3 -m pip install -r requirements.txt
+
 
 #RUN conda activate pyimagej
 # Make RUN commands use the new environment:
@@ -26,6 +26,7 @@ RUN python /opt/fiji/init_fiji.py
 
 WORKDIR /
 COPY read_settings_and_process_mpt_tiff.py .
+COPY first_30_slides.tif .
 COPY entrypoint.sh .
 #RUN mamba install jupyterlab
 #WORKDIR /notebooks
