--- a/Containers/TrackMate/Dockerfile
+++ b/Containers/TrackMate/Dockerfile
@@ -3,7 +3,8 @@ FROM condaforge/mambaforge
 RUN mamba create -n pyimagej -c conda-forge pyimagej openjdk=8 unzip
 
 COPY requirements.txt /tmp/requirements.txt
-
+RUN pip install numpy
+RUN pip install matplotlib
 
 #RUN conda activate pyimagej
 # Make RUN commands use the new environment:
@@ -26,7 +27,8 @@ RUN python /opt/fiji/init_fiji.py
 
 WORKDIR /
 COPY read_settings_and_process_mpt_tiff.py .
-COPY first_30_slides.tif .
+COPY test.py .
+COPY PBS_control_3_0_1.tif .
 COPY entrypoint.sh .
 #RUN mamba install jupyterlab
 #WORKDIR /notebooks
@@ -34,6 +36,6 @@ COPY entrypoint.sh .
 
 #ENTRYPOINT [ "bash" ]
 #ENTRYPOINT ["conda", "run", "--no-capture-output", "-n", "pyimagej", "jupyter", "lab","--ip=0.0.0.0","--allow-root"]
-ENTRYPOINT ["conda", "run", "--no-capture-output", "-n", "pyimagej", "ImageJ-linux64", "--ij2", "--headless", "--run", "read_settings_and_process_mpt_tiff.py"]
+ENTRYPOINT ["conda", "run", "--no-capture-output", "-n", "pyimagej", "ImageJ-linux64", "--ij2", "--headless", "--run", "test.py"]
 #CMD conda run -n pyimagej ImageJ-linux64 --headless --jython read_settings_and_process_tiff_stack.py
 #CMD /entrypoint.sh
