--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -15,4 +15,6 @@ jobs:
     steps:
     - uses: actions/checkout@v4
     - name: Build the Docker image
-      run: docker build Containers/TrackMate/ --file Dockerfile --tag my-image-name:$(date +%s)
+      run: |
+        cd Containers/TrackMate
+        docker build . --file Dockerfile --tag my-image-name:$(date +%s)
