--- a/Containers/TrackMate/Dockerfile
+++ b/Containers/TrackMate/Dockerfile
@@ -3,7 +3,7 @@ FROM condaforge/mambaforge
 RUN mamba create -n pyimagej -c conda-forge pyimagej openjdk=8 unzip
 
 COPY Containers/TrackMate/requirements.txt /tmp/requirements.txt
-RUN python3 -m pip install -r requirements.txt
+RUN python3 -m pip install -r /tmp/requirements.txt
 
 #RUN conda activate pyimagej
 # Make RUN commands use the new environment:
